# supply_chain_forecast

./: README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
data/: GDP.xlsx
notebooks/: chapter1.ipynb  chapter11.ipynb  chapter12.ipynb  chapter13.ipynb  chapter14.ipynb  chapter15.ipynb  chapter15_16.ipynb  chapter17.ipynb  chapter18.ipynb  chapter19.ipynb  chapter2.ipynb  chapter22.ipynb  chapter23.ipynb  chapter24.ipynb  chapter25.ipynb  chapter3.ipynb  chapter5.ipynb  chapter6.ipynb  chapter7.ipynb  chapter9.ipynb
src/: adaboost.py  cat_features.py  clustering.py  extreme_gradient_boosting.py  feature_optimization.py  feature_optimization2.py  main.py  ml_models.py  neural_networks.py
src/cleaning/: outliers.py
src/data/: ingestion.py  preparation.py
src/evaluation/: __init__.py  key_performance_indicators.py
src/models/exponential_smoothing/: double.py  optimization.py  simple.py  triple.py
src/models/ma/: moving_average.py
